--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ fastapi==0.89.1
 greenlet==2.0.1
 h11==0.14.0
 idna==3.4
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pydantic==1.10.4
 sniffio==1.3.0
 SQLAlchemy==2.0.0rc3
